--- a/package.json
+++ b/package.json
@@ -17,8 +17,13 @@
   },
   "homepage": "https://github.com/deleteman/nodeconf-redis-game#readme",
   "dependencies": {
+    "async": "^2.5.0",
+    "body-parser": "^1.18.2",
     "config": "^1.27.0",
     "express": "^4.16.2",
+    "random-string": "^0.2.0",
+    "redis": "^2.8.0",
+    "request": "^2.83.0",
     "winston": "^2.4.0"
   }
 }
